fixed spacing for team page

--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -30,7 +30,7 @@
  .navbar-brand {
     //  position: absolute;
     img {
-        height: 70px;
+        height: 48px;
     } 
     
 }
