--- a/assets/css/_sass/_team.scss
+++ b/assets/css/_sass/_team.scss
@@ -10,6 +10,6 @@
 .team-photo {
     background-position: top;
     background-size: cover;
-    min-height: 300px;    
+    min-height: 400px;    
 
 }
